force-app/main/default/objects/Liable_Party__c/fields/Assessment_ID_Conga__c.field-meta.xml
<CustomField>
    <fullName>Assessment_ID_Conga__c</fullName>
    <formula>Liability__r.Assessment_ID_Conga__c</formula>
    <label>Assessment ID - Conga</label>
    <type>Text</type>
</CustomField>