force-app/main/default/objects/Liable_Party__c/fields/Attention_To_Title__c.field-meta.xml
<CustomField>
    <fullName>Attention_To_Title__c</fullName>
    <label>Attention To Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>