force-app/main/default/objects/Liable_Party__c/fields/Basis_for_Liability__c.field-meta.xml
<CustomField>
    <fullName>Basis_for_Liability__c</fullName>
    <description>Holds the basis for this party&#39;s liability for an amount owed. Set when adding liable parties to the liability via the case issue engine. Options for values are defined in the custom setting &quot;Record Type Mapping&quot;</description>
    <label>Basis for Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employer Liability</fullName>
            </value>
            <value>
                <fullName>Joint Employer AB 633</fullName>
            </value>
            <value>
                <fullName>Joint Liability</fullName>
            </value>
            <value>
                <fullName>Successor Liability</fullName>
            </value>
            <value>
                <fullName>Guarantor Status Liability</fullName>
            </value>
            <value>
                <fullName>Guarantor LC 2677</fullName>
            </value>
            <value>
                <fullName>Bad Faith LD</fullName>
            </value>
            <value>
                <fullName>Successor Empl Liability</fullName>
            </value>
            <value>
                <fullName>Employer Liability LC 238.5</fullName>
            </value>
            <value>
                <fullName>Employer Liability LC 2810.3</fullName>
            </value>
            <value>
                <fullName>Employer Liability - CE LC 2810.3</fullName>
            </value>
            <value>
                <fullName>Employer Liability LC 558.1</fullName>
            </value>
            <value>
                <fullName>Individual Liability LC 1197.1</fullName>
            </value>
            <value>
                <fullName>Individual Liability LC 558</fullName>
            </value>
            <value>
                <fullName>LC 238.5 plus LC 558.1</fullName>
            </value>
            <value>
                <fullName>LC 238.5 plus LC 2810.3</fullName>
            </value>
            <value>
                <fullName>LC 558.1 plus LC 2810.3</fullName>
            </value>
            <value>
                <fullName>LC 2677  (Garment)</fullName>
            </value>
            <value>
                <fullName>LC 558.1 plus LC 2677</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>