force-app/main/default/objects/Liable_Party__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>Cross object formula to pull the Case/Case ID from the Case MGMT record on the Liability to the Liable Party record.</description>
    <formula>( Liability__r.Case_Management__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>