force-app/main/default/objects/Liable_Party__c/fields/Case_Role_Full_Output_Non_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Full_Output_Non_Formula__c</fullName>
    <description>Non-formula field used to migrate the value in the Case Role Entity Full Output on the Liable Party to this field; we then will use it to group Liable Parties together in a SOQL query for output in the 633 75 ODA document.</description>
    <label>Case Role Full Output Non-Formula</label>
    <length>200</length>
    <type>Text</type>
</CustomField>