force-app/main/default/objects/Liable_Party__c/fields/Hearing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer__c</fullName>
    <formula>ODA__r.Meeting__r.Hearing_Officer__r.FirstName + &#39; &#39; +  ODA__r.Meeting__r.Hearing_Officer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hearing Officer</label>
    <type>Text</type>
</CustomField>