force-app/main/default/objects/Liable_Party__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>For data migration</description>
    <label>Imported From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>