force-app/main/default/objects/Liable_Party__c/fields/Interest_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_Received__c</fullName>
    <description>payments received against interest roll to this amount on the LP.</description>
    <inlineHelpText>Payments received applied to interest.</inlineHelpText>
    <label>Interest Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>