force-app/main/default/objects/Liable_Party__c/fields/Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Balance_Due__c</fullName>
    <formula>Proportionate_Interest_Amount__c -  Interest_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance due of interest that applies to this liable party</inlineHelpText>
    <label>Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>