force-app/main/default/objects/Liable_Party__c/fields/Liable_Party_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Account_Name__c</fullName>
    <description>Using wfr, pulls the text of the account name down to this text field for use in lookup searches</description>
    <label>Liable Party Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>