force-app/main/default/objects/Liable_Party__c/fields/Liable_Party_Address__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Address__c</fullName>
    <description>Field to amalgamate the Primary Address associated with a Liable Party</description>
    <formula>Entity__r.ShippingStreet &amp; BR() &amp; Entity__r.ShippingCity &amp; &quot;, &quot; &amp; Entity__r.ShippingState &amp; &quot; &quot; &amp; Entity__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liable Party - Address</label>
    <type>Text</type>
</CustomField>