force-app/main/default/objects/Liable_Party__c/fields/Penalty_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount_Collected__c</fullName>
    <description>Penalty amount collected on behalf on this liable party. Generally will be updated automatically when a payment is collected.</description>
    <inlineHelpText>Amount collected on behalf of this liable party related to this liability.</inlineHelpText>
    <label>Penalty Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>