force-app/main/default/objects/Liable_Party__c/fields/Proportionate_Wage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_Wage_Amount__c</fullName>
    <description>Calculates the proportionate wage amount</description>
    <formula>Proportionate_Share__c *  Liability__r.Total_Wages_Assessed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proportionate amount of wages from the liability owed by this party</inlineHelpText>
    <label>Proportionate Wage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>