force-app/main/default/objects/Liable_Party__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liable</fullName>
            </value>
            <value>
                <fullName>Not Liable</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>