force-app/main/default/objects/Liable_Party__c/fields/Wage_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Wage_Amount_Collected__c</fullName>
    <description>Wage amount collected on behalf on this liable party. Generally will be updated automatically when a payment is collected.</description>
    <inlineHelpText>Wage amount collected on behalf of this liable party related to this liability.</inlineHelpText>
    <label>Wage Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>