force-app/main/default/objects/Liable_Party__c/recordTypes/Garment.recordType-meta.xml
<RecordType>
    <fullName>Garment</fullName>
    <active>true</active>
    <description>Used for Garment Liable Parties</description>
    <label>Garment</label>
</RecordType>