force-app/main/default/objects/Liable_Party__c/recordTypes/WCA.recordType-meta.xml
<RecordType>
    <fullName>WCA</fullName>
    <active>true</active>
    <description>Used for WCA Liable Parties</description>
    <label>WCA</label>
</RecordType>